libs/config/tests/errors/ce7_missing_parent/stdout.ansi
[31m[CE7] Error:[0m class's parent is not present
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:8:7[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m8 │[0m [38;5;249mc[0m[38;5;249ml[0m[38;5;249ma[0m[38;5;249ms[0m[38;5;249ms[0m[38;5;249m [0m[38;5;249mt[0m[38;5;249mh[0m[38;5;249mi[0m[38;5;249mr[0m[38;5;249md[0m[38;5;249m:[0m[38;5;249m [0m[38;5;201mo[0m[38;5;201mt[0m[38;5;201mh[0m[38;5;201me[0m[38;5;201mr[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m  │[0m              [38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m  
 [38;5;240m  │[0m                [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m not present in config
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: add `class [38;5;201mother[0m;` to the config to declare it as external
[38;5;246m───╯[0m
